<resources>
    <string name="app_name">CoinTracker</string>

    <string name="error_internet">Network error</string>
    <string name="error_watchlist_empty">Nothing to watch</string>
    <string name="error_generic_empty">Nothing to display</string>

    <!-- Main Menu -->
    <string name="menu_item_market">Market</string>
    <string name="menu_item_watchlist">Watchlist</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_calculator">Calculator</string>
    <string name="menu_item_settings">Settings</string>

    <!-- Market and watchlist -->
    <string name="label_rank">#</string>
    <string name="label_coin">Coin</string>
    <string name="label_price">Price</string>
    <string name="label_change">24h</string>
    <string name="label_market_cap">Market Cap</string>
    <string name="label_last_updated">Updated %s</string>
    <string name="label_global_market_cap">Global Market Cap</string>
    <string name="label_market_volume">24h Market Volume</string>

    <!-- Search -->
    <string name="hint_search">Search</string>
    <string name="hint_search_coin">Search for a coin…</string>
    <string name="label_trending">Trending</string>
    <string name="label_coins">Coins</string>

    <!-- Settings -->
    <string name="label_settings_app">App Settings</string>
    <string name="label_settings_others">Others</string>

    <!-- Calculator -->
    <string name="hint_currency">Currency</string>
    <string name="hint_amount">Amount</string>

    <!-- Settings -->
    <string name="label_setting_dark_mode">Dark Mode</string>
    <string name="label_setting_currency">Currency</string>
    <string name="label_setting_language">Language</string>
    <string name="label_setting_start_screen">Default Start Screen</string>

    <string name="label_setting_privacy_policy">Privacy Policy</string>
    <string name="label_setting_terms">Terms &amp; Conditions</string>
    <string name="label_setting_powered_by">Powered by: CoinGecko</string>
    <string name="label_select_an_option">Select an option</string>
</resources>